- changed title of notebook in YAML

--- a/inst/rmarkdown/templates/jjf-model-notebook/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/jjf-model-notebook/skeleton/skeleton.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Data Cleansing and Prep"
+title: "XGBoost Model and Optimization"
 author: "John J. Fox"
 date: "The Date"
 output: html_notebook
